Kubernetes/Ngenix_SSL_Cluster/nginx_ssl_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-stagging"
  name: dritonissuer
  namespace: driton
spec:
  ingressClassName: nginx
  rules:
  - host: tonytest.sandbox.aws.teamwork.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dritonservice
            port:
              number: 80

  tls:
    - hosts:
      - tonytest.sandbox.aws.teamwork.net
      secretName: drsecretcertificat
---

###Ingress controller
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
